  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml,
  files/ovirt-engine.init.d, ovirt-engine-9999.ebuild:
  fixups