@@ -1,3 +1,6 @@
+  04 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
+  Use >=dev-python/python-exec-0.3 as it supports symlinks
+
   03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> +metadata.xml,
   files/ovirt-engine.init.d, ovirt-engine-9999.ebuild:
   fixups
